--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,15 @@ export(pal_peach)
 export(pal_seeblau)
 export(pal_unikn)
 export(pal_unikn_ppt)
+export(pal_unikn_pref)
 export(pal_which)
 export(plot_pal)
 import(ggplot2)
 import(grDevices)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,theme)
+importFrom(grDevices,col2rgb)
+importFrom(grDevices,grey)
+importFrom(grDevices,rgb)
