add pal_unikn_plot (combining pal_seeblau with pal_unikn)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(pal_n_sq)
 export(pal_peach)
 export(pal_seeblau)
 export(pal_unikn)
+export(pal_unikn_plus)
 export(pal_unikn_ppt)
 export(pal_unikn_pref)
 export(pal_which)
