add pal_signal and signal (Ampel)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(pal_petrol)
 export(pal_pinky)
 export(pal_seeblau)
 export(pal_seegruen)
+export(pal_signal)
 export(pal_unikn)
 export(pal_unikn_plus)
 export(pal_unikn_ppt)
@@ -25,5 +26,6 @@ export(pinky)
 export(plot_pal)
 export(seeblau)
 export(seegruen)
+export(signal)
 import(ggplot2)
 import(grDevices)
