--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: unikn
 Type: Package
 Title: Graphical Elements of the University of Konstanz's Corporate Design
-Version: 0.0.0.9001
-Date: 2018-02-15
+Version: 0.0.0.9002
+Date: 2018-02-18
 Authors@R: c(person("Hansjoerg", "Neth", role = c("aut", "cre"), email = "h.neth@uni.kn"))
 Author: Hansjoerg Neth [aut, cre]
 Maintainer: Hansjoerg Neth <h.neth@uni.kn>
-Description: Provide elements of the University of Konstanz's corporate design in R. For instance, seeblau color, related color palettes, boxes, etc. See https://www.uni-konstanz.de for details. 
+Description: Provide graphical elements of the University of Konstanz's corporate design in R. We presently provide all pre-defined color palettes, preferred colors, functions for choosing and plotting colors, and for creating new color palettes. We will add further elements (e.g., boxes and themes) in the future. See https://www.uni-konstanz.de for details. 
 Depends:
     R (>= 3.4.0)
 Imports:
