split colors.R into 2 files: color_definitions.R and color_functions.R

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Suggests:
     rmarkdown,
     knitr,
     roxygen2
-Collate: 'colors.R'
+Collate: 'color_definitions.R'
+         'color_functions.R'
 Encoding: UTF-8
 LazyData: true
 License: none
