add 3 combined palettes: pal_unikn_dark, pal_unikn_light, and pal_unikn_pair

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,9 @@ export(pal_seeblau)
 export(pal_seegruen)
 export(pal_signal)
 export(pal_unikn)
+export(pal_unikn_dark)
+export(pal_unikn_light)
+export(pal_unikn_pair)
 export(pal_unikn_plus)
 export(pal_unikn_ppt)
 export(pal_unikn_pref)
