--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,7 @@ Suggests:
     roxygen2
 Collate: 'color_definitions.R'
          'color_functions.R'
+         'plot_box.R'
 Encoding: UTF-8
 LazyData: true
 License: none
