--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: unikn
 Type: Package
 Title: Graphical Elements of the University of Konstanz's Corporate Design
-Version: 0.0.0.9003
-Date: 2018-02-18
+Version: 0.0.0.9004
+Date: 2018-02-19
 Authors@R: c(person("Hansjoerg", "Neth", role = c("aut", "cre"), email = "h.neth@uni.kn"))
 Author: Hansjoerg Neth [aut, cre]
 Maintainer: Hansjoerg Neth <h.neth@uni.kn>
@@ -23,6 +23,7 @@ Suggests:
 Collate: 'color_definitions.R'
          'color_functions.R'
          'plot_box.R'
+         'plot_text.R'         
 Encoding: UTF-8
 LazyData: true
 License: none
