rename highlight function to mark

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,8 @@
 export(Bordeaux)
 export(col_scale)
 export(grau)
-export(highlight)
 export(karpfenblau)
+export(mark)
 export(pal_Bordeaux)
 export(pal_grau)
 export(pal_karpfenblau)
