--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(Bordeaux)
 export(col_scale)
+export(frame)
 export(grau)
 export(karpfenblau)
 export(mark)
@@ -32,6 +33,7 @@ export(plot_pal)
 export(seeblau)
 export(seegruen)
 export(signal)
+export(xbox)
 import(ggplot2)
 import(grDevices)
 import(graphics)
