re-arranging files and names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 export(Bordeaux)
 export(col_scale)
-export(frame)
 export(grau)
 export(karpfenblau)
 export(mark)
@@ -28,11 +27,11 @@ export(pal_which)
 export(peach)
 export(petrol)
 export(pinky)
-export(plot_box)
 export(plot_pal)
 export(seeblau)
 export(seegruen)
 export(signal)
+export(slide)
 export(xbox)
 import(ggplot2)
 import(grDevices)
