--- a/desktop.ini
+++ b/desktop.ini
@@ -2,7 +2,7 @@
 ConfirmFileOp=0
 IconFile=C:\Program Files (x86)\Land Baden-Wuerttemberg\bwSyncAndShare\.\Folder.ico
 IconIndex=0
-InfoTip=Zeigt Dateien und Verzeichnisse an, die vom Client verwaltet werden
+InfoTip=Shows files and folders managed by the client
 IconResource=C:\Program Files (x86)\Land Baden-Wuerttemberg\bwSyncAndShare\.\Folder.ico,0
 [ViewState]
 Mode=
