--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: unikn
 Type: Package
 Title: Graphical Elements of the University of Konstanz's Corporate Design
-Version: 0.0.0.9009
-Date: 2018-02-28
+Version: 0.0.0.9010
+Date: 2018-03-02
 Authors@R: c(person("Hansjoerg", "Neth", role = c("aut", "cre"), email = "h.neth@uni.kn"), 
              person("Nico", "Gradwohl", role = "aut"))
 Author: Hansjoerg Neth [aut, cre], Nico Gradwohl [aut] 
@@ -11,7 +11,7 @@ Description: Provide graphical elements of the University of Konstanz's corporat
 Depends:
     R (>= 3.4.0)
 Imports:
-    utils (>= 3.4.0),
+    utils,
     ggplot2,
     cowplot, 
     tibble,
