--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,36 @@
+inst/doc
 # .gitignore | 2019 02 15
 
 # History files
 .Rhistory
 .Rapp.history
-
 # Mac OS:
 .DS_Store 
-
 # Session Data files
 .RData
-
 # Example code in package build process
 *-Ex.R
-
 # Output files from R CMD build
 /*.tar.gz
-
 # Output files from R CMD check
 /*.Rcheck/
-
 # RStudio files
 .Rproj.user/
 *.Rproj 
-
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
-
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
-
 # knitr and R markdown default cache and files directories: 
 */*_cache/
 */*_files/
 **/figure-html
-
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
 .Rproj.user
-
 # Others:
 _gitless
 .PowerFolder
-
 # eof. 
