add (preliminary) documentation to seepal

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,8 +31,10 @@ export(pal_unikn_ppt)
 export(pal_unikn_pref)
 export(pal_which)
 export(plot_pal)
+export(seepal)
 export(slide)
 export(xbox)
 import(ggplot2)
 import(grDevices)
 import(graphics)
+import(utils)
