document line, post, and heading macros

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(Seeblau)
 export(Seegruen)
 export(Signal)
 export(col_scale)
+export(heading)
+export(line)
 export(mark)
 export(pal_bordeaux)
 export(pal_grau)
@@ -31,6 +33,7 @@ export(pal_unikn_ppt)
 export(pal_unikn_pref)
 export(pal_which)
 export(plot_pal)
+export(post)
 export(seepal)
 export(slide)
 export(xbox)
