replace seepal by seecol

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,7 +34,7 @@ export(pal_unikn_pref)
 export(pal_which)
 export(plot_pal)
 export(post)
-export(seepal)
+export(seecol)
 export(slide)
 export(url_unikn)
 export(xbox)
