--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,10 +13,10 @@ export(col_scale)
 export(heading)
 export(line)
 export(mark)
+export(mixcol)
 export(pal_bordeaux)
 export(pal_grau)
 export(pal_karpfenblau)
-export(pal_n)
 export(pal_peach)
 export(pal_petrol)
 export(pal_pinky)
@@ -35,6 +35,7 @@ export(post)
 export(seecol)
 export(slide)
 export(url_unikn)
+export(usecol)
 export(xbox)
 import(ggplot2)
 import(grDevices)
