--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 inst/doc
 # .gitignore | 2019 02 15
-
 # History files
 .Rhistory
 .Rapp.history
 # Mac OS:
-.DS_Store 
+.DS_Store
 # Session Data files
 .RData
 # Example code in package build process
@@ -16,13 +15,13 @@ inst/doc
 /*.Rcheck/
 # RStudio files
 .Rproj.user/
-*.Rproj 
+*.Rproj
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
-# knitr and R markdown default cache and files directories: 
+# knitr and R markdown default cache and files directories:
 */*_cache/
 */*_files/
 **/figure-html
@@ -33,4 +32,5 @@ vignettes/*.pdf
 # Others:
 _gitless
 .PowerFolder
-# eof. 
+# eof.
+desktop.ini
