replace line by uline

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,6 @@ export(Seegruen)
 export(Signal)
 export(col_scale)
 export(heading)
-export(line)
 export(mark)
 export(mixcol)
 export(pal_bordeaux)
@@ -34,6 +33,7 @@ export(pal_which)
 export(post)
 export(seecol)
 export(slide)
+export(uline)
 export(url_unikn)
 export(usecol)
 export(xbox)
