rename pal_unikn to pal_unikn_web and pal_unikn_plus to pal_unikn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,9 +24,9 @@ export(pal_unikn)
 export(pal_unikn_dark)
 export(pal_unikn_light)
 export(pal_unikn_pair)
-export(pal_unikn_plus)
 export(pal_unikn_ppt)
 export(pal_unikn_pref)
+export(pal_unikn_web)
 export(post)
 export(seecol)
 export(slide)
@@ -34,7 +34,6 @@ export(uline)
 export(url_unikn)
 export(usecol)
 export(xbox)
-import(ggplot2)
 import(grDevices)
 import(graphics)
 import(utils)
