--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,25 +1,23 @@
 Package: unikn
 Type: Package
 Title: Graphical Elements of the University of Konstanz's Corporate Design
-Version: 0.0.0.9022
-Date: 2018-05-16
+Version: 0.0.0.9024
+Date: 2018-05-20
 Authors@R: c(person("Hansjoerg", "Neth", role = c("aut", "cre"), email = "h.neth@uni.kn"), 
              person("Nico", "Gradwohl", role = "aut"))
 Author: Hansjoerg Neth [aut, cre], Nico Gradwohl [aut] 
 Maintainer: Hansjoerg Neth <h.neth@uni.kn>
-Description: Provide graphical elements of the University of Konstanz's corporate design in R. The package mostly supports color (pre-defined colors and color palettes, plus functions for changing, viewing, and using them), but also provides functions for plotting boxes and styled text elements (colored titles, underlining, etc.). See https://www.uni-konstanz.de for details. 
+Description: Provide graphical elements of the University of Konstanz's corporate design in R. The unikn package mostly supports color (pre-defined colors and color palettes, plus functions for changing, viewing, and using them), but also provides functions for plotting boxes and styled text elements (colored titles, underlining, etc.). 
 Depends:
     R (>= 3.4.0)
 Imports:
     utils,
-    ggplot2,
-    cowplot, 
-    tibble,
-    tidyr
+    ggplot2
 Suggests:
+    RColorBrewer,
     devtools,
+    knitr, 
     rmarkdown,
-    knitr,
     roxygen2
 Collate: 'color_def_1.R'
          'color_def_2.R'
@@ -32,7 +30,7 @@ Collate: 'color_def_1.R'
          'plot_text_calls.R'  
 Encoding: UTF-8
 LazyData: true
-License: none
+License: CC BY-SA 4.0 
 URL: https://github.com/hneth/unikn 
 BugReports: https://github.com/hneth/unikn/issues
 VignetteBuilder: knitr
