--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: unikn
 Type: Package
-Title: Graphical Elements of the University of Konstanz's Corporate Design
+Title: Graphical Elements of the University of Konstanz's Corporate Design in R
 Version: 0.0.0.9024
 Date: 2018-05-20
 Authors@R: c(person("Hansjoerg", "Neth", role = c("aut", "cre"), email = "h.neth@uni.kn"), 
@@ -18,7 +18,8 @@ Suggests:
     devtools,
     knitr, 
     rmarkdown,
-    roxygen2
+    roxygen2,
+    spelling
 Collate: 'color_def_1.R'
          'color_def_2.R'
          'color_util.R'
