--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,9 +31,12 @@ export(post)
 export(seecol)
 export(slide)
 export(uline)
+export(unikn.guide)
 export(url_unikn)
 export(usecol)
 export(xbox)
 import(grDevices)
 import(graphics)
 import(utils)
+importFrom(utils,browseVignettes)
+importFrom(utils,vignette)
