--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: unikn
 Type: Package
-Title: Graphical Elements of the University of Konstanz's Corporate Design in R
+Title: Graphical Elements of the University of Konstanz's Corporate Design 
 Version: 0.0.0.9025
 Date: 2018-05-20
 Authors@R: c(person("Hansjoerg", "Neth", role = c("aut", "cre"), email = "h.neth@uni.kn"), 
@@ -25,7 +25,8 @@ Collate: 'color_def_1.R'
          'plot_box.R'
          'plot_box_calls.R'
          'plot_text.R'
-         'plot_text_calls.R'  
+         'plot_text_calls.R'
+         'start_unikn.R'
 Encoding: UTF-8
 LazyData: true
 License: CC BY-SA 4.0 
