--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,5 +1,3 @@
-^cran-comments\.md$
-^CRAN-RELEASE$
 ^README\.Rmd$
 ^.*\.Rproj$
 ^\.Rproj\.user$
@@ -7,3 +5,8 @@
 ^.git$
 ^.PowerFolder$
 ^desktop.ini$ 
+^cran-comments.md$
+^CRAN-RELEASE$
+^_pkgdown\.yml$
+^pkgdown$
+^logo.png$
