--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
+# .gitignore | 2019 06 05:
 inst/doc
-# .gitignore | 2019 02 15
 # History files
 .Rhistory
 .Rapp.history
@@ -11,12 +11,12 @@ inst/doc
 *-Ex.R
 # Output files from R CMD build
 /*.tar.gz
-# Output files from R CMD check
+# Output files from R CMD check: 
 /*.Rcheck/
-# RStudio files
+# RStudio files: 
 .Rproj.user/
 *.Rproj
-# produced vignettes
+# produced vignettes: 
 vignettes/*.html
 vignettes/*.pdf
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
@@ -25,7 +25,7 @@ vignettes/*.pdf
 */*_cache/
 */*_files/
 **/figure-html
-# Temporary files created by R markdown
+# Temporary files created by R Markdown: 
 *.utf8.md
 *.knit.md
 .Rproj.user
@@ -33,5 +33,8 @@ vignettes/*.pdf
 _gitless
 .PowerFolder
 desktop.ini
+# pkgdown: 
+^_pkgdown\.yml$
+^pkgdown$
+^logo.png$
 # eof.
-
