--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,11 +30,13 @@ export(pal_unikn_web)
 export(post)
 export(seecol)
 export(slide)
+export(theme_unikn)
 export(uline)
 export(unikn.guide)
 export(url_unikn)
 export(usecol)
 export(xbox)
+import(ggplot2)
 import(grDevices)
 import(graphics)
 import(utils)
