--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: unikn
 Type: Package
 Title: Graphical Elements of the University of Konstanz's Corporate Design 
-Version: 0.1.0.9001
+Version: 0.1.0.9002
 Date: 2019-06-15
 Authors@R: c(person("Hansjoerg", "Neth", role = c("aut", "cre"), email = "h.neth@uni.kn"), 
              person("Nico", "Gradwohl", role = "aut"))
@@ -11,7 +11,8 @@ Description: Define and use graphical elements of corporate design manuals in R.
 Depends:
     R (>= 3.4.0)
 Imports:
-    utils
+    utils,
+    ggplot2 
 Suggests:
     knitr, 
     rmarkdown,
@@ -26,6 +27,7 @@ Collate: 'color_def_1.R'
          'plot_box_calls.R'
          'plot_text.R'
          'plot_text_calls.R'
+         'plot_themes.R'
          'start_unikn.R'
 Encoding: UTF-8
 LazyData: true
