--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(Pinky)
 export(Seeblau)
 export(Seegruen)
 export(Signal)
+export(defpal)
 export(heading)
 export(mark)
 export(pal_bordeaux)
