--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,9 @@ export(Pinky)
 export(Seeblau)
 export(Seegruen)
 export(Signal)
-export(defpal)
 export(heading)
 export(mark)
+export(newpal)
 export(pal_bordeaux)
 export(pal_grau)
 export(pal_karpfenblau)
