--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,5 +1,5 @@
 ## _pkgdown.yml | unikn
-## spds, uni.kn | 2019 08 28
+## spds, uni.kn | 2019 09 24
 ## -----------------------------------------------
 
 ## site info: ----------
@@ -17,7 +17,7 @@ authors:
     href: https://www.spds.uni-konstanz.de/
 
 development:
-  mode: devel  # devel OR release
+  mode: release  # devel OR release
 
 # template:
 #  params:
