--- a/docs/dev/pkgdown.yml
+++ b/docs/dev/pkgdown.yml
@@ -1,9 +1,10 @@
 pandoc: 1.19.2.1
-pkgdown: 1.4.1
+pkgdown: 1.5.1
 pkgdown_sha: ~
 articles:
   colors: colors.html
   text: text.html
+last_built: 2020-05-31T15:55Z
 urls:
   reference: https://hneth.github.io/unikn//reference
   article: https://hneth.github.io/unikn//articles
