--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(pal_unikn_pref)
 export(pal_unikn_web)
 export(post)
 export(seecol)
+export(seecol_2)
 export(slide)
 export(theme_unikn)
 export(uline)
