export theme_grau

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(pal_unikn_web)
 export(post)
 export(seecol)
 export(slide)
+export(theme_grau)
 export(theme_unikn)
 export(uline)
 export(unikn.guide)
