--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,5 +1,5 @@
 ## _pkgdown.yml | unikn
-## spds, uni.kn | 2019 09 25
+## spds, uni.kn | 2020 08 24
 ## -----------------------------------------------
 
 ## site info: ----------
@@ -80,6 +80,7 @@ reference:
   contents:
   - slide
   - xbox
+  - theme_grau
   - theme_unikn
 - title: Text
   desc: Text decorations. 
