--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -5,11 +5,11 @@
 ^.git$
 ^.PowerFolder$
 ^desktop.ini$ 
-^cran-comments.md$
-^CRAN-RELEASE$
 ^docs$
 ^_pkgdown\.yml$
 ^pkgdown$
 ^logo.png$
 ^revdep$
 ^cran-comments\.md$
+^CRAN-RELEASE$
+^\.travis\.yml$
