--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,70 @@
-## .gitignore | 2020 08 25: 
-## History files
+## .gitignore | unikn | 2020 08 26:
+
+## 1. generic stuff: -----
+
+# self:
+# .gitignore
+
+# Mac OS:
+.DS_Store
+
+
+## 2. R stuff: -----
+
+# History files
 .Rhistory
 .Rapp.history
-## Mac OS:
-.DS_Store
-## Session Data files
+
+# Session data files
 .RData
-## Example code in package build process
+
+# Example code in package build process
 *-Ex.R
-## Output files from R CMD build
+
+# Output files from R CMD build
 /*.tar.gz
-## Output files from R CMD check: 
+
+# Output files from R CMD check: 
 /*.Rcheck/
-## RStudio files: 
+
+# RStudio files: 
 .Rproj.user/
 *.Rproj
+
 # produced vignettes: 
 vignettes/*.html
 vignettes/*.pdf
+
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
-## knitr and R markdown default cache and files directories:
+
+# knitr and RMarkdown cache and files directories:
 */*_cache/
 # */*_files/
 # **/figure-html
-## Temporary files created by R Markdown: 
+
+# RMarkdown: 
 *.utf8.md
 *.knit.md
 .Rproj.user
-## CRAN:
+
+# CRAN:
 cran-comments.md
 ^CRAN-RELEASE$
-## Others:
-_gitless
-.PowerFolder
-desktop.ini
-## pkgdown: 
+
+# pkgdown: 
 ^_pkgdown\.yml$
 ^pkgdown$
 ^logo.png$
+
+
+## 3. Project files: -----
+
+# dirs:
+_gitless
+
+# files:
+.PowerFolder
+desktop.ini
+
 ## eof.
