--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(Pinky)
 export(Seeblau)
 export(Seegruen)
 export(Signal)
-export(grep_col)
+export(grepal)
 export(heading)
 export(mark)
 export(newpal)
