--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(pal_unikn_pref)
 export(pal_unikn_web)
 export(post)
 export(seecol)
+export(shades_of)
 export(slide)
 export(theme_grau)
 export(theme_unikn)
