add simcol() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(pal_unikn_web)
 export(post)
 export(seecol)
 export(shades_of)
+export(simcol)
 export(slide)
 export(theme_grau)
 export(theme_unikn)
