--- a/docs/dev/pkgdown.yml
+++ b/docs/dev/pkgdown.yml
@@ -1,13 +1,13 @@
 pandoc: 2.10.1
-pkgdown: 1.6.1
+pkgdown: 2.0.6
 pkgdown_sha: ~
 articles:
   color_inst: color_inst.html
   color_recipes: color_recipes.html
   colors: colors.html
   text: text.html
-last_built: 2021-04-24T19:32Z
+last_built: 2022-08-11T08:59Z
 urls:
-  reference: https://hneth.github.io/unikn//reference
-  article: https://hneth.github.io/unikn//articles
+  reference: https://hneth.github.io/unikn/reference
+  article: https://hneth.github.io/unikn/articles
 
