update online documentation (of current devel version)

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -17,7 +17,7 @@ authors:
     href: https://www.spds.uni-konstanz.de/
 
 development:
-  mode: release  # devel OR release
+  mode: devel # devel OR release
 
 # template:
 #  params:
