--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,5 +46,6 @@ import(ggplot2)
 import(grDevices)
 import(graphics)
 import(utils)
+importFrom(stats,runif)
 importFrom(utils,browseVignettes)
 importFrom(utils,vignette)
