import dnorm from stats

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ import(ggplot2)
 import(grDevices)
 import(graphics)
 import(utils)
+importFrom(stats,dnorm)
 importFrom(stats,runif)
 importFrom(utils,browseVignettes)
 importFrom(utils,vignette)
