export contributed color palettes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,8 @@ export(slide)
 export(theme_grau)
 export(theme_unikn)
 export(uline)
+export(uni_konstanz)
+export(uni_konstanz_pref)
 export(unikn.guide)
 export(url_unikn)
 export(usecol)
