add "uni_" and "_pal" color palettes

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,5 +1,5 @@
 ## _pkgdown.yml | unikn
-## spds, uni.kn | 2022 09 20
+## spds, uni.kn | 2022 10 22
 ## -----------------------------------------------
 
 ## site info: ----------
@@ -73,6 +73,8 @@ reference:
   - Seegruen
   - Signal
   - starts_with("pal_")
+  - ends_with("_pal")
+  - starts_with("uni_")
 - title: Color functions
   desc: Commands for viewing, using, creating, and finding colors and color palettes. 
   contents:
