--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(demopal)
 export(grepal)
 export(heading)
 export(mark)
+export(mpg_pal)
 export(newpal)
 export(pal_bordeaux)
 export(pal_grau)
@@ -39,8 +40,15 @@ export(slide)
 export(theme_grau)
 export(theme_unikn)
 export(uline)
+export(uni_freiburg_blue)
+export(uni_freiburg_br)
+export(uni_freiburg_grey)
+export(uni_freiburg_info)
 export(uni_konstanz)
 export(uni_konstanz_pref)
+export(uni_princeton_0)
+export(uni_princeton_1)
+export(uni_princeton_2)
 export(unikn.guide)
 export(url_unikn)
 export(usecol)
