export ETH color palettes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,9 @@ export(Seegruen)
 export(Signal)
 export(ac)
 export(demopal)
+export(eth_pal)
+export(eth_pal_black_grey)
+export(eth_pal_light)
 export(grepal)
 export(heading)
 export(mark)
