--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,7 @@ export(Signal)
 export(ac)
 export(demopal)
 export(eth_pal)
-export(eth_pal_black_grey)
+export(eth_pal_grey)
 export(eth_pal_light)
 export(grepal)
 export(heading)
