--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,5 +1,5 @@
 ## _pkgdown.yml | unikn
-## spds, uni.kn | 2022 11 09
+## spds, uni.kn | 2022 11 10
 ## -----------------------------------------------
 
 ## site info: ----------
@@ -18,7 +18,7 @@ authors:
     href: https://www.spds.uni-konstanz.de/
 
 development:
-  mode: release # devel OR release
+  mode: devel # devel OR release
 
 # template:
 #  params:
