export 3 palettes of Uni Goettingen

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,9 @@ export(uni_freiburg_blue)
 export(uni_freiburg_br)
 export(uni_freiburg_grey)
 export(uni_freiburg_info)
+export(uni_goettingen_1)
+export(uni_goettingen_2)
+export(uni_goettingen_3)
 export(uni_konstanz)
 export(uni_konstanz_pref)
 export(uni_princeton_0)
