--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,9 @@ export(uni_konstanz_pref)
 export(uni_princeton_0)
 export(uni_princeton_1)
 export(uni_princeton_2)
+export(uni_regensburg_1)
+export(uni_regensburg_2)
+export(uni_regensburg_3)
 export(unikn.guide)
 export(url_unikn)
 export(usecol)
