export 3 color palettes of Caltech

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,9 @@ export(Seeblau)
 export(Seegruen)
 export(Signal)
 export(ac)
+export(caltech_pal_1)
+export(caltech_pal_2)
+export(caltech_pal_3)
 export(demopal)
 export(eth_pal)
 export(eth_pal_grey)
