export 2 hu_pals

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ export(eth_pal_grey)
 export(eth_pal_light)
 export(grepal)
 export(heading)
+export(hu_pal_1)
+export(hu_pal_2)
 export(mark)
 export(mpg_pal)
 export(newpal)
