add 3 RPI color palettes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,9 @@ export(pal_unikn_ppt)
 export(pal_unikn_pref)
 export(pal_unikn_web)
 export(post)
+export(rpi_pal_1)
+export(rpi_pal_2)
+export(rpi_pal_3)
 export(seecol)
 export(shades_of)
 export(simcol)
