export 3 LMU palettes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,9 @@ export(grepal)
 export(heading)
 export(hu_pal_1)
 export(hu_pal_2)
+export(lmu_pal_1)
+export(lmu_pal_2)
+export(lmu_pal_3)
 export(mark)
 export(mpg_pal)
 export(newpal)
