export 4 FU color palettes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,10 @@ export(demopal)
 export(eth_pal)
 export(eth_pal_grey)
 export(eth_pal_light)
+export(fu_pal_0)
+export(fu_pal_1)
+export(fu_pal_2)
+export(fu_pal_3)
 export(grepal)
 export(heading)
 export(hu_pal_1)
