--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,8 @@ export(uni_freiburg_info)
 export(uni_goettingen_1)
 export(uni_goettingen_2)
 export(uni_goettingen_3)
+export(uni_koeln_1)
+export(uni_koeln_2)
 export(uni_konstanz)
 export(uni_konstanz_pref)
 export(uni_princeton_0)
