export 2 pals of Uni Bonn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,8 @@ export(slide)
 export(theme_grau)
 export(theme_unikn)
 export(uline)
+export(uni_bonn_1)
+export(uni_bonn_2)
 export(uni_freiburg_blue)
 export(uni_freiburg_br)
 export(uni_freiburg_grey)
