--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,9 @@ export(theme_unikn)
 export(uline)
 export(uni_bonn_1)
 export(uni_bonn_2)
+export(uni_freiburg_0)
+export(uni_freiburg_1)
+export(uni_freiburg_2)
 export(uni_freiburg_blue)
 export(uni_freiburg_br)
 export(uni_freiburg_grey)
