--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,6 +76,8 @@ export(uni_koeln_1)
 export(uni_koeln_2)
 export(uni_konstanz)
 export(uni_konstanz_pref)
+export(uni_mannheim_1)
+export(uni_mannheim_2)
 export(uni_princeton_0)
 export(uni_princeton_1)
 export(uni_princeton_2)
