--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,8 +74,8 @@ export(uni_hamburg_1)
 export(uni_hamburg_2)
 export(uni_koeln_1)
 export(uni_koeln_2)
-export(uni_konstanz)
-export(uni_konstanz_pref)
+export(uni_konstanz_1)
+export(uni_konstanz_2)
 export(uni_mannheim_1)
 export(uni_mannheim_2)
 export(uni_princeton_0)
