rename 2 color palettes of ETH Zurich

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,9 +14,9 @@ export(caltech_pal_1)
 export(caltech_pal_2)
 export(caltech_pal_3)
 export(demopal)
-export(eth_pal)
-export(eth_pal_grey)
-export(eth_pal_light)
+export(eth_pal_1)
+export(eth_pal_2)
+export(eth_pal_3)
 export(fu_pal_0)
 export(fu_pal_1)
 export(fu_pal_2)
