export palette of RPTU

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(post)
 export(rpi_pal_1)
 export(rpi_pal_2)
 export(rpi_pal_3)
+export(rptu_pal)
 export(seecol)
 export(shades_of)
 export(simcol)
