export 2 palettes of Uni Jena

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,8 @@ export(uni_goettingen_2)
 export(uni_goettingen_3)
 export(uni_hamburg_1)
 export(uni_hamburg_2)
+export(uni_jena_1)
+export(uni_jena_2)
 export(uni_kiel_1)
 export(uni_kiel_2)
 export(uni_koeln_1)
