--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,5 +1,5 @@
 ## _pkgdown.yml | unikn
-## spds, uni.kn | 2023 01 15
+## spds, uni.kn | 2023 08 09
 ## -------------------------
 
 ## site info: ----------
@@ -74,15 +74,6 @@ reference:
   - Seegruen
   - Signal
   - starts_with("pal_")
-  - starts_with("caltech_")  
-  - starts_with("eth_")
-  - starts_with("fu_")
-  - starts_with("hu_")
-  - starts_with("lmu_")
-  - starts_with("mpg_")
-  - starts_with("uni_")
-  - starts_with("rpi_")
-  - starts_with("rptu_")
 - title: Color manipulation functions
   desc: Commands for viewing, creating, changing, finding and using colors and color palettes. 
   contents:
@@ -93,7 +84,8 @@ reference:
   - newpal
   - demopal
   - shades_of 
-  - ac 
+  - ac
+  - get_col_names
 - title: Plotting functions 
   desc: Functions for plotting objects and themes. 
   contents:
