--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,8 +1,10 @@
 ^README\.Rmd$
 ^.*\.Rproj$
 ^\.Rproj\.user$
-^_gitless$
 ^.git$
+^\.github$
+^_gitless$
+^\_logo$
 ^.PowerFolder$
 ^desktop.ini$ 
 ^docs$
@@ -14,4 +16,3 @@
 ^CRAN-RELEASE$
 ^\.travis\.yml$
 ^CRAN-SUBMISSION$
-^\.github$
